# python-izaber-wamp

./: .dockerignore  .gitignore  Dockerfile  README  README.md  VERSIONS.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt  run.sh  setup.py
docker/: setup-env.sh  wait-for-nexus.sh
examples/: change-user.py  metadata.py  rosters.py  service.py  spawn-wamp.py
izaber_wamp/: __init__.py  controller.py
izaber_wamp/wamp/: __init__.py  messages.py
src/izaber_wamp/: __init__.py
tests/: 010-importable_test.py  020-connect_test.py  021-otp_apikey_test.py  030-register_test.py  040-call_test.py  050-hook_test.py  060-change-user.py  070-spawn-wamp.py  080-rosters.py  090-metadata.py  izaber.yaml  izaber_wamp  launch-nexus.sh  run-tests.py
tests/data/: izaber.yaml
