[project]
name = "izaber-wamp"
version = "3.0.20231125"
description = "Base load point for iZaber WAMP code"
authors = [
  { name="Aki Mimoto", email= "aki@zaber.com>" },
]
requires-python = ">=3.8.0,<4.0"
dependencies = [
    "izaber >=3.1.20231029",
    "swampyer >=3.0.20231027",
    "cbor2 >=4.1.2",
    "typing-extensions >=4.7.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-dir = {"" = "src"}

[tool.pdm.dev-dependencies.test]

pytest = ">=4.6.11"
nox = ">=2023.4.22"
Faker = ">=18.13.0"
passlib = ">=1.7.4"

